# vof_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic-brain.ini  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  deps.py  errors.py  factory.py  lifespan.py  logging.py  main.py  settings.py
app/api/: __init__.py  auth.py  me.py
app/brain/: base.py  entity_extractor.py  postgres_brain.py  tags.py
app/connectors/: __init__.py  base.py  google_workspace.py
app/db/: __init__.py  app_session.py  base.py  brain_session.py
app/email/: __init__.py  agentmail.py  base.py  composer.py  oauth_personal.py  schemas.py
app/memory/: base.py  stub.py  supermemory.py
app/migrations/: env.py
app/miniagents/: __init__.py  brain_updater.py  caller_memory_writer.py  dashboard_rollup.py  email_delivery.py  email_drafter.py  email_reply_handler.py  scheduler.py  summarizer_agent.py  web_verifier.py
app/orchestrator/: __init__.py  prewarm.py  prompts.py  retrieval.py  session.py  sms_orchestrator.py  streaming.py  tool_dispatch.py  turn_loop.py  voice_handler.py
app/realtime/: bus.py  redis_client.py  ws_hub.py
app/schemas/: __init__.py  auth.py  brain.py  call.py  dashboard.py  decision.py  intake.py  verification.py  ws_frames.py
app/security/: hashing.py  hmac.py  jwt.py
app/services/: auth_service.py  correction_intake.py  corrections.py  decisions.py  intake_handlers.py  intake_processing.py  intake_processor.py  workspace_provisioning.py
app/skills/: __init__.py  base.py  llm_client.py  loader.py
app/storage/: base.py  s3.py
app/telephony/: agentphone.py  base.py  dispatcher.py  events.py  fake.py
app/workers/: action_item_dispatcher.py  correction_cascade.py  dashboard_rollup.py  decision_timeout.py  email_delivery.py  post_call.py  settings.py
frontend/: DEMO_SCRIPT.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/scripts/: configure_agent.py
hld/: email_delivery_hld.md  voice_of_the_field_frontend_hld.md  voice_of_the_field_hld.md  web_verifier_hld_mini_agent.md
lld/: phase_0_scaffolding_and_mvp.md  phase_1_durability_and_productivity.md
scripts/: alembic_wrapper.py  seed_test_workspace.py
scripts/postgres_init/: 01_dbs.sh
skills/classifier/: CHANGELOG.md  SKILL.md  (+2 more)
smoke/: __init__.py  __main__.py  _base.py  _runner.py  agentphone.py  google_workspace.py  llm.py  object_storage.py  postgres_app.py  postgres_brain.py  redis.py  supermemory.py
tests/: conftest.py
(+160 files in other folders)
