[project]
name = "vof-backend"
version = "0.1.0"
description = "Voice of the Field — phone-first intelligence layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    # Data layer
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Cache / queue / pubsub
    "redis>=5.2.0",
    "arq>=0.26.0",
    # Object storage
    "aiobotocore>=2.15.0",
    # Auth
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    # Third-party SDKs
    "anthropic>=0.39.0",
    "supermemory>=3.0.0",
    "httpx>=0.27.0",
    # Templating + extraction
    "jinja2>=3.1.0",
    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    # Document extraction (intake)
    "pdfplumber>=0.11.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    # Smoke runner
    "pyyaml>=6.0.2",
    "psycopg[binary]>=3.2.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "freezegun>=1.5.0",
    "pre-commit>=4.0.0",
    "types-pyyaml",
    "vulture>=2.16",
]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["app/migrations/versions_app", "app/migrations/versions_brain"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "ASYNC",         # async best practices
    "RUF",
]
ignore = ["E501"]   # let formatter handle line length

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
exclude = ["app/migrations/.*"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["arq.*", "aiobotocore.*", "pdfplumber.*", "openpyxl.*", "docx.*", "pypdf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.storage.s3",
    "app.services.intake_extractors.*",
    "app.realtime.*",
    "app.orchestrator.session",
]
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires docker compose stack",
    "e2e: requires full stack + fake-AP",
    "load: latency budget checks",
]
